--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
+    <main>
+        <section data-include="partials/partial.about-us.html"></section>
+        <p>Anna Kornafel</p>
+    </main>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
