--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <main>
-        <section data-include="partials/partial.about-us.html"></section>
-        <p>Anna Kornafel</p>
+        <section data-include="partials/about-us.partial.html"></section>
+        
     </main>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
