--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <section data-include="partials/partial.about-us.html"></section>
         <p>Anna Kornafel</p>
+        <section data-include="partials/turn-up.partial.html"></section>
     </main>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
