--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main>
         <section data-include="partials/partial.about-us.html"></section>
+        <section data-include="partials/turn-up.partial.html"></section>
     </main>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
