--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <section data-include="partials/partial.about-us.html"></section>
+        <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
     </main>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
