--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
+    <header data-include="partials/header.partial.html"></header>
     <main>
         <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
     </main>
+    <footer data-include="partials/footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
