--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
+        <section data-include="partials/latest-news.partial.html"></section>
     </main>
     <footer data-include="partials/footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
