--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header data-include="partials/header.partial.html"></header>
     <main>
         <section data-include="partials/about-us.partial.html"></section>
+        <section data-include="partials/events.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
         <section data-include="partials/latest-news.partial.html"></section>
     </main>
