--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
+
 <body>
     <header data-include="partials/header.partial.html"></header>
     <main>
@@ -14,8 +16,10 @@
         <section data-include="partials/events.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
         <section data-include="partials/latest-news.partial.html"></section>
+        <section data-include="partials/fm-faces.partial.html"></section>
     </main>
     <footer data-include="partials/footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
+
 </html>
