--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <section data-include="partials/events.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
         <section data-include="partials/latest-news.partial.html"></section>
+        <section data-include="partials/about-crazy-fm.partial.html"></section>
         <section data-include="partials/fm-faces.partial.html"></section>
     </main>
     <footer data-include="partials/footer.partial.html"></footer>
