--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header data-include="partials/header.partial.html"></header>
     <main>
+        <section data-include="partials/schedule.partial.html"></section>
         <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/events.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
