--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
        <section data-include="partials/videos.partial.html"></section>
 =======
         <section data-include="partials/schedule.partial.html"></section>
+        <section data-include="partials/win.partial.html"></section>
         <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/events.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
