--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section data-include="partials/schedule.partial.html"></section>
         <section data-include="partials/win.partial.html"></section>
         <section data-include="partials/careers.partial.html"></section>
-        <section data-include="partials/featured podcasts.html"></section>
+        <section data-include="partials/featured-podcasts.html"></section>
         <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/events.partial.html"></section>
         <section data-include="partials/turn-up.partial.html"></section>
