Aadded partial footer file

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header data-include="partials/header.partial.html"></header>
     <main>
-       <section data-include="partials/crazy-fm-faces.news.partial.html"></section>
-       <section data-include="partials/videos.partial.html"></section>
+        <section data-include="partials/crazy-fm-faces.news.partial.html"></section>
+        <section data-include="partials/videos.partial.html"></section>
         <section data-include="partials/schedule.partial.html"></section>
         <section data-include="partials/win.partial.html"></section>
         <section data-include="partials/careers.partial.html"></section>
@@ -27,6 +27,8 @@
         <section data-include="partials/why-choose-us.partial.html"></section>
         <section data-include="partials/shows.partial.html"></section>
     </main>
+    <footer data-include="partials/footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
- </body>
+</body>
+
 </html>
