--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header data-include="partials/header.partial.html"></header>
     <main>
+        <section data-include="partials/crazy-fm.html"></section>
         <section data-include="partials/crazy-fm-faces.news.partial.html"></section>
         <section data-include="partials/videos.partial.html"></section>
         <section data-include="partials/schedule.partial.html"></section>
