add content css careers and win

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Radio Station</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css">
 </head>
-
 <body>
     <header data-include="partials/header.partial.html"></header>
     <main>
@@ -18,7 +16,6 @@
         <section data-include="partials/videos.partial.html"></section>
         <section data-include="partials/schedule.partial.html"></section>
         <section data-include="partials/win.partial.html"></section>
-        <section data-include="partials/careers.partial.html"></section>
         <section data-include="partials/featured-podcasts.html"></section>
         <section data-include="partials/about-us.partial.html"></section>
         <section data-include="partials/events.partial.html"></section>
@@ -27,10 +24,10 @@
         <section data-include="partials/fm-faces.partial.html"></section>
         <section data-include="partials/why-choose-us.partial.html"></section>
         <section data-include="partials/shows.partial.html"></section>
+        <section data-include="partials/careers.partial.html"></section>
         <section data-include="partials/follow-us.partial.html"></section>
     </main>
     <footer data-include="partials/footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
-
 </html>
