--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section data-include="partials/follow-us.partial.html"></section>
     </main>
     <footer data-include="partials/footer.partial.html"></footer>
+    <script type="module" src="js/index.js"></script>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
