changed css latest news and css news

--- a/news.html
+++ b/news.html
@@ -15,24 +15,24 @@
             <h2 class="latest-news__title">
                 Latest News
             </h2>
-            <div class="latest-news__cards">
-                <ul class="latest-news__menu">
-                    <li class="latest-news__menu--item component">
+            <div class="news__cards">
+                <ul class="news__menu">
+                    <li class="news__menu--item component">
                         <img src="img/latest-news/lines.jpg" alt="Lines" class="component__image">
                         <p class="component__title">Music</p>
                         <h3 class="component__text">Britney Spears Celebrates 20-Year Anniversary of '...Baby One More Time'</h3>
                     </li>
-                    <li class="latest-news__menu--item component">
+                    <li class="news__menu--item component">
                         <img src="img/latest-news/girl-with-a-can.jpg" alt="Girl-with-a-can" class="component__image">
                         <p class="component__title">Music</p>
                         <h3 class="component__text">Christina Aguilera Features a Very Unlikely Celebrity on a Song</h3>
                     </li>
-                    <li class="latest-news__menu--item component">
+                    <li class="news__menu--item component">
                         <img src="img/latest-news/men.jpg" alt="Men" class="component__image">
                         <p class="component__title">Music</p>
                         <h3 class="component__text">Supergroup The Good, The Bad & The Queen Announces First Album</h3>
                     </li>
-                    <li class="latest-news__menu--item component">
+                    <li class="news__menu--item component">
                         <img src="img/latest-news/yellowww.jpg" alt="Yellow" class="component__image">
                         <p class="component__title">Giveaway</p>
                         <h3 class="component__text">Someone Will Win $50K!!! Special Offer for Our Listeners</h3>
@@ -40,7 +40,6 @@
                 </ul>
             </div>
         </div>
-
         <div class="contact-form">
         <div class="container contact-form__cont">
             <div class="contact-form__content">
@@ -57,7 +56,6 @@
             </div>
         </div>
         </div>
-
     </main>
     <footer data-include="partials/footer.partial.html"></footer>
     <script type="module" src="js/index.js"></script>
