--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header data-include="partials/header.partial.html"></header>
     <main>
         <section data-include="partials/crazy-fm.partial.html"></section>
+        <section data-include="partials/carousel-why-choose-us.partial.html"></section>
         <section data-include="partials/why-choose-us.partial.html"></section>
         <section data-include="partials/schedule.partial.html"></section>
         <section data-include="partials/win.partial.html"></section>
